--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
   "author": "DevAsk",
   "license": "NYX",
   "dependencies": {
-    "@whiskeysockets/baileys": "npm:baileys-mod@latest",
     "@adiwajshing/keyed-db": "^0.2.4",
     "@bochilteam/scraper": "4.0.22-alpha.0",
     "@google/generative-ai": "^0.24.0",
     "@hapi/boom": "^10.0.1",
     "@jkt48connect-corp/sdk": "^3.0.15",
     "@saipulanuar/jadianime-ts": "^2.0.0",
+    "@whiskeysockets/baileys": "npm:baileys-mod@latest",
     "anime-wallpaper": "^1.0.2",
     "api-dylux": "^1.4.4",
     "awesome-phonenumber": "^5.9.0",
@@ -55,6 +55,7 @@
     "lowdb": "^2.1.0",
     "mal-scraper": "^2.11.4",
     "mathjs": "^11.3.0",
+    "megajs": "^1.3.9",
     "miniget": "^4.2.2",
     "moment-timezone": "^0.5.34",
     "mongoose": "^6.2.1",
